# mt4y

./: Cargo.toml  README.md
src/: lib.rs  main.rs  utils.rs
src/image/: compress.rs  mod.rs  thumbnail.rs
src/video/: mod.rs  rotation.rs  trim.rs
