[package]
name = "mt4y"
version = "0.1.0"
edition = "2021"
authors = ["ksk001100 <hm.pudding0715@gmail.com>"]
description = "FFmpeg wrapper CLI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "4.0.14"
image = "0.24"
mozjpeg = "0.9"
seahorse = "2.1"
